mean estimation recursive form

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -264,6 +264,35 @@
   urla         = {http://www.amazon.com/dp/1611974712},
   }
 
+@book{candy2009,
+  isbn         = {9780470430576},
+  isbn10       = {0470430575},
+  author       = {James V. Candy},
+  title        = {Bayesian Signal Processing: Classical, Modern, and Particle Filtering Methods}
+  volume       = {54},
+  series       = {Adaptive and Cognitive Dynamic Systems: Signal Processing, Learning, Communications and Control},
+  publisher    = {Wiley},
+  year         = {2009},
+  pages        = {602},
+  url          = {http://books.google.com/books?vid=ISBN9780470430576},
+  urla         = {http://www.amazon.com/dp/9780470430576},
+  }
+  
+@book{candy2016,
+  isbn         = {9781119125457},
+  isbn10       = {1119125456},
+  author       = {James V. Candy},
+  title        = {Bayesian Signal Processing: Classical, Modern, and Particle Filtering Methods}
+  volume       = {54},
+  edition      = {2},
+  series       = {Adaptive and Cognitive Dynamic Systems: Signal Processing, Learning, Communications and Control},
+  publisher    = {John Wiley \& Sons},
+  year         = {2016},
+  pages        = {640},
+  url          = {http://books.google.com/books?vid=ISBN9781119125457},
+  note         = {\url{http://www.amazon.com/dp/9781119125457}},
+  }
+  
 @inproceedings{carne2006,
   author       = {Thomas G. Carne and C. R. Dohrmann},
   title        = {Improving Experimental Frequency Response Function Matrices for Admittance Modeling},
