additive noise estimation revision

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1586,6 +1586,7 @@
  \newcommand{\pmeanx}[1][X]{{\mu_{\mathsfup{#1}}}}
  \newcommand{\pmeany}[0]   {{\pmeanx[Y]}}
  \newcommand{\pVar}        {{\mathfnct{V\!a\!r}}}
+ \newcommand{\pCov}        {{\mathfnct{C\!o\!v}}}
  \newcommand{\pvar}  [0]   {{\sigma^2}}
  \newcommand{\pvarx} [1][X]{{\sigma^2_{\mathsfup{#1}}}}
  \newcommand{\pvary} [0]   {{\pvarx[Y]}}
