--- a/common/kl_basis.tex
+++ b/common/kl_basis.tex
@@ -261,8 +261,8 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
   \end{array}}
   \implies
 \implies
-\brb{\begin{array}{lrclD}
-   \pE(\fdoty_n|\theta)       &= \fdotx_n(\theta) + \pE \fdotv_n & (\prope{additive noise})
+\brb{\begin{array}{lrcl}
+   \pE(\fdoty_n|\theta)       &= \fdotx_n(\theta) + \pE \fdotv_n
 \end{array}}
 }
 \end{theorem}
@@ -347,27 +347,27 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
   \\(C). & $\fv(t)\sim\pN(0,\sigma^2)$                            & (\prope{Gaussian})
   \end{array}}}{additive \prope{Gaussian} channel}
 \implies
-\brb{\begin{array}{rclD}
-   \pE\fdotv_n           &=   & 0                               & \\%\text{\scriptsize(noise projection is zero-mean                )} \\
-   \pE(\fdoty_n|\theta)  &=   & \fdotx_n(\theta)                & \\%\text{\scriptsize(expected receiver projection = transmitted projection )} \\
-   \fdotv_n              &\sim& \pN{0}{\sigma^2}                & (noise projections are \prope{Gaussian}        ) \\
-   \fdoty_n|\theta       &\sim& \pN{\fdotx_n(\theta)}{\sigma^2} & (receiver projections are \prope{Gaussian}     ) \\
+\brb{\begin{array}{FrclD}
+     (1). & \pE\fdotv_n           &=   & 0                               & (\prope{zero-mean})
+   \\(2). & \pE(\fdoty_n|\theta)  &=   & \fdotx_n(\theta)                & 
+   \\(3). & \fdotv_n              &\sim& \pN{0}{\sigma^2}                & (\prope{Gaussian})
+   \\(4). & \fdoty_n|\theta       &\sim& \pN{\fdotx_n(\theta)}{\sigma^2} & (\prope{Gaussian})
 \end{array}}
 }
 \end{theorem}
 \begin{proof}
 \begin{align*}
    \pE\fdotv_{n}
-     &= \pE\inprod{\fn(t)}{\fpsi_n(t)}
-   \\&= \inprod{\pE\fn(t)}{\fpsi_n(t)}
+     &= \pE\inprod{\fv(t)}{\fpsi_n(t)}
+   \\&= \inprod{\pE\fv(t)}{\fpsi_n(t)}
    \\&= \inprod{0}{\fpsi_n(t)}
    \\&= 0
 \\
 \\
    (\fdoty_n |\theta)
      &\eqd {\inprod{\rvy(t)}{\fpsi_n(t)}}  |\theta
-   \\&=    {\inprod{\rvx(t;\theta)+\fn(t)}{\fpsi_n(t)}}
-   \\&=    {\inprod{\rvx(t;\theta)}{\fpsi_n(t)}} +   {\inprod{\fn(t)}{\fpsi_n(t)}}
+   \\&=    {\inprod{\rvx(t;\theta)+\fv(t)}{\fpsi_n(t)}}
+   \\&=    {\inprod{\rvx(t;\theta)}{\fpsi_n(t)}} +   {\inprod{\fv(t)}{\fpsi_n(t)}}
    \\&=    \inprod{\sum_{k=1}^\xN \fdotx_k(\theta) \fpsi_k(t)}{\fpsi_n(t)} + \fdotv_n
    \\&=    \sum_{k=1}^\xN \fdotx_k(\theta) \inprod{\fpsi_k(t)}{\fpsi_n(t)} + \fdotv_n
    \\&=    \fdotx_n(\theta)  + \fdotv_n
@@ -397,54 +397,70 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
     (A). & $\Psi$ is an \structe{orthonormal basis} for $\fx(t)$ & and
   \\(B). & $\fy(t) \eqd \fx(t) + \fv(t)$                         & (\prope{additive noise})
   \\(C). & $\fv(t)\sim\pN(0,\sigma^2)$                           & (\prope{Gaussian})
-  \end{array}}}{\prope{additive Gaussian} channel}
+  \end{array}}}{\prope{additive Gaussian} system}
 \implies
-\brb{\begin{array}{lclD}
-   \pE\fdotv_n                            &=& 0                     & (noise projection is zero-mean) \\
-   \pE(\fdoty_n|\theta)                   &=& \fdotx_n(\theta)      & (expected receiver projection = transmitted projection) \\
-   \cov{\fdotv_n}{\fdotv_m}               &=& \sigma^2 \kdelta_{nm} & (noise projections are \prope{uncorrelated}) \\
-   \cov{\fdoty_n|\theta}{\fdoty_m|\theta }&=& \sigma^2 \kdelta_{nm} & (receiver projections are \prope{uncorrelated})
+\brb{\begin{array}{FlclD}
+     (1). & \pE\fdotv_n                            &=& 0                     & (\prope{zero-mean})
+   \\(2). & \pE(\fdoty_n|\theta)                   &=& \fdotx_n(\theta)      & 
+   \\(3). & \cov{\fdotv_n}{\fdotv_m}               &=& \sigma^2 \kdelta_{nm} & (\prope{uncorrelated})
+   \\(4). & \cov{\fdoty_n|\theta}{\fdoty_m|\theta }&=& \sigma^2 \kdelta_{nm} & (\prope{uncorrelated})
 \end{array}}
 }
 \end{theorem}
 \begin{proof}
-Because the noise is additive (see \prefpp{thm:an_stats})
-\begin{align*}
-   \pE\fdotv_{n}           &= 0  \\
-   (\fdoty_n |\theta)      &= \fdotx_n(\theta)  + \fdotv_n \\
-   \pE({\fdoty_n} | \theta) &= \fdotx_n(\theta).
-\end{align*}
+\begin{enumerate}
+  \item Because the noise is additive (see \prefpp{thm:an_stats})
+    \begin{align*}
+       \pE\fdotv_{n}           &= 0  \\
+       (\fdoty_n |\theta)      &= \fdotx_n(\theta)  + \fdotv_n \\
+       \pE({\fdoty_n} | \theta) &= \fdotx_n(\theta).
+    \end{align*}
 
-Because the noise is also \prope{white},
+  \item Proof for (3):
 \begin{align*}
    \cov{\fdotv_m}{\fdotv_n}
-      &= \cov{\inprod{\fn(t)}{\fpsi_m(t)}}{\inprod{\fn(t)}{\fpsi_n(t)}}
-    \\&= \pE\brs{\inprod{\fn(t)}{\fpsi_m(t)} \inprod{\fn(t)}{\fpsi_n(t)}}
-    \\&= \pE\brs{\inprod{\fn(t)}{\fpsi_m(t)} \inprod{n(\estT)}{\fpsi_n(\estT)}}
-    \\&= \pE\brs{ \inprod{n(\estT)\inprod{\fn(t)}{\fpsi_m(t)}}{\fpsi_n(\estT)}}
-    \\&= \pE\brs{ \inprod{\inprod{n(\estT)\fn(t)}{\fpsi_m(t)}}{\fpsi_n(\estT)}}
-    \\&= \inprod{\inprod{\pE\brs{ n(\estT)\fn(t)}}{\fpsi_m(t)}}{\fpsi_n(\estT)}
-    \\&= \inprod{\inprod{\sigma^2 \delta(t-\estT)}{\fpsi_m(t)}}{\fpsi_n(\estT)}
-    \\&= \sigma^2 \inprod{\fpsi_n(t)}{\fpsi_m(t)}
+      &= \cov{\inprod{\fv(t)}{\fpsi_m(t)}}{\inprod{\fv(t)}{\fpsi_n(t)}}
+      && \text{by definition of $\fdotv_n$}
+      && \text{\xref{def:sstat}}
+    \\&= \cov{\brp{\int_{t\in\R} \fv(t) \fpsi_m(t)\dt} 
+              \brp{\int_{u\in\R} \fv(u) \fpsi_n(u)\du}}
+      && \text{by definition of $\inprodn$}
+      && \text{\xref{def:sstat}}
+    \\&= \pE\brs{\brp{\int_{t\in\R} \fv(t) \fpsi_m(t)\dt} 
+              \brp{\int_{u\in\R} \fv(u) \fpsi_n(u)\du}}
+      && \text{by definition of $\pCov$}
+    \\&= \pE\brs{\int_{t\in\R}\int_{u\in\R} \fv(t)\fv(u) \fpsi_m(t) \fpsi_n(u) \dt\du} 
+    \\&= \int_{t\in\R}\int_{u\in\R} \pE\brs{\fv(t)\fv(u)} \fpsi_m(t) \fpsi_n(u) \dt\du
+    \\&= \int_{t\in\R}\int_{u\in\R} \sigma^2\delta(t-u) \fpsi_m(t) \fpsi_n(u) \dt\du
+      && \text{by \prope{white} hypothesis}
+      && \text{???}
+    \\&= \sigma^2 \int_{t\in\R}  \fpsi_m(t) \fpsi_n(u) \dt
+    \\&= \sigma^2 \inprod{\fpsi_m(t)}{\fpsi_n(u)}
+      && \text{by definition of $\inprodn$}
+      && \text{\xref{def:sstat}}
     \\&= \brbl{\begin{array}{lM}
              \sigma^2 & for $n=m$ \\
              0        & for $n\ne m$.
           \end{array}}
-\\
-\\
-   \cov{\fdoty_n|\theta}{\fdoty_m|\theta }
-      &= \pE\brs{\fdoty_n \fdoty_m |\theta} - [\pE\fdoty_n|\theta][\pE\fdoty_m|\theta ]
-    \\&= \pE\brs{(\fdotx_n(\theta) +\fdotv_n)(\fdotx_m(\theta) +\fdotv_m)} - \fdotx_n(\theta) \fdotx_m(\theta)
-    \\&= \pE\brs{(\fdotx_n(\theta) +\fdotv_n)(\fdotx_m(\theta) +\fdotv_m)} - \fdotx_n(\theta) \fdotx_m(\theta)
-    \\&= \pE\brs{\fdotx_n(\theta) \fdotx_m(\theta) +\fdotx_n(\theta) \fdotv_m+ \fdotv_n\fdotx_m(\theta) +\fdotv_n\fdotv_m } - \fdotx_n(\theta) \fdotx_m(\theta)
-    \\&= \fdotx_n(\theta) \fdotx_m(\theta) + \fdotx_n(\theta) \pE\brs{\fdotv_m}+ \pE\brs{\fdotv_n}\fdotx_m(\theta) +\pE\brs{\fdotv_n\fdotv_m}  - \fdotx_n(\theta) \fdotx_m(\theta)
-    \\&= 0 + \fdotx_n(\theta) \cdot0 + 0\cdot\fdotx_m(\theta) + \cov{\fdotv_n}{\fdotv_m}+[\pE\fdotv_n][\pE\fdotv_m]
-    \\&= \sigma^2 \kdelta_{nm} + 0\cdot0
-    \\&= \brbl{\begin{array}{lM}
-             \sigma^2 & for $n=m$ \\
-             0        & for $n\ne m$.
-          \end{array}}
-\end{align*}
+      && \text{by \prope{orthonormal} property}
+      && \text{\xref{def:sstat}}
+  \end{align*}
+  
+  \item Proof for (4):
+    \begin{align*}
+      \cov{\fdoty_n|\theta}{\fdoty_m|\theta }
+         &= \pE\brs{\fdoty_n \fdoty_m |\theta} - [\pE\fdoty_n|\theta][\pE\fdoty_m|\theta ]
+       \\&= \pE\brs{(\fdotx_n(\theta) +\fdotv_n)(\fdotx_m(\theta) +\fdotv_m)} - \fdotx_n(\theta) \fdotx_m(\theta)
+       \\&= \pE\brs{(\fdotx_n(\theta) +\fdotv_n)(\fdotx_m(\theta) +\fdotv_m)} - \fdotx_n(\theta) \fdotx_m(\theta)
+       \\&= \pE\brs{\fdotx_n(\theta) \fdotx_m(\theta) +\fdotx_n(\theta) \fdotv_m+ \fdotv_n\fdotx_m(\theta) +\fdotv_n\fdotv_m } - \fdotx_n(\theta) \fdotx_m(\theta)
+       \\&= \fdotx_n(\theta) \fdotx_m(\theta) + \fdotx_n(\theta) \pE\brs{\fdotv_m}+ \pE\brs{\fdotv_n}\fdotx_m(\theta) +\pE\brs{\fdotv_n\fdotv_m}  - \fdotx_n(\theta) \fdotx_m(\theta)
+       \\&= 0 + \fdotx_n(\theta) \cdot0 + 0\cdot\fdotx_m(\theta) + \cov{\fdotv_n}{\fdotv_m}+[\pE\fdotv_n][\pE\fdotv_m]
+       \\&= \sigma^2 \kdelta_{nm} + 0\cdot0
+       \\&= \brbl{\begin{array}{lM}
+                \sigma^2 & for $n=m$ \\
+                0        & for $n\ne m$.
+             \end{array}}
+    \end{align*}
 \end{proof}
 
 %======================================
@@ -501,15 +517,15 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
   \\(B). & $\fy(t) \eqd \fx(t) + \fv(t)$                         & (\prope{additive noise})
   \\(C). & $\fv(t)$ is                                           & (\prope{white noise})
   \\(D). & $\fv(t)\sim\pN(0,\sigma^2)$                           & (\prope{Gaussian})
-  \end{array}}}{\prope{additive white Gaussian} channel}
+  \end{array}}}{\prope{additive white Gaussian} system}
 \implies
 \brb{\begin{array}{FrclD}
-     (1). & \fdotv_n                            &\sim& \pN{0}{\sigma^2}                     & (noise projections are \prope{Gaussian}        )
-   \\(2). & \fdoty_n|\theta                     &\sim& \pN{\fdotx_n(\theta)}{\sigma^2}      & (receiver projections are \prope{Gaussian}     )
-   \\(3). & \cov{\fdotv_n}{\fdotv_m}            &=   & \sigma^2 \kdelta_{nm}                & (noise projections are \prope{uncorrelated}    )
-   \\(4). & \cov{\fdoty_n}{\fdoty_m }           &=   & \sigma^2 \kdelta_{nm}                & (receiver projections are \prope{uncorrelated} )
-   \\(5). & \psp\{\fdotv_n=a \land \fdotv_m=b\} &=   & \psp\{\fdotv_n=a\}\psp\{\fdotv_m=b\} & (noise    projections are \prope{independent}  )
-   \\(6). & \psp\{\fdoty_n=a \land \fdoty_m=b\} &=   & \psp\{\fdoty_n=a\}\psp\{\fdoty_m=b\} & (receiver projections are \prope{independent}  )
+     (1). & \fdotv_n                            &\sim& \pN{0}{\sigma^2}                     & (\prope{Gaussian})
+   \\(2). & \fdoty_n|\theta                     &\sim& \pN{\fdotx_n(\theta)}{\sigma^2}      & (\prope{Gaussian})
+   \\(3). & \cov{\fdotv_n}{\fdotv_m}            &=   & \sigma^2 \kdelta_{nm}                & (\prope{uncorrelated})
+   \\(4). & \cov{\fdoty_n}{\fdoty_m }           &=   & \sigma^2 \kdelta_{nm}                & (\prope{uncorrelated})
+   \\(5). & \psp\{\fdotv_n=a \land \fdotv_m=b\} &=   & \psp\{\fdotv_n=a\}\psp\{\fdotv_m=b\} & (\prope{independent})
+   \\(6). & \psp\{\fdoty_n=a \land \fdoty_m=b\} &=   & \psp\{\fdoty_n=a\}\psp\{\fdoty_m=b\} & (\prope{independent})
 \end{array}}
 }
 \end{theorem}
@@ -517,7 +533,7 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
 \begin{enumerate}
   \item Proof for (1) and (2) follow because the operations are \prope{linear} on \prope{Gaussian} processes.
 
-  \item By \prefpp{thm:awn_stats} (for AWN channel)
+  \item Proof for (3) and (4): by \prefpp{thm:awn_stats} (for AWN channel)
     \begin{align*}
        \pE{\fdotv_{n}} &= 0
      \\\cov{\fdotv_m}{\fdotv_n} &= \sigma^2 \kdelta_{mn}
@@ -526,7 +542,7 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
      \\\cov{\fdoty_n}{\fdoty_m } &= \sigma^2 \kdelta_{mn}
     \end{align*}
 
-  \item Because the processes are \prope{Gaussian},
+  \item Proof for (5) and (6): Because the processes are \prope{Gaussian},
         \prope{uncorrelated} implies \prope{independent}.
 \end{enumerate}
 \end{proof}
@@ -557,7 +573,6 @@ In parameter detection, the estimate is a member of an finite set.
 In parameter estimation, the estimate is a member of an infinite set
 \xref{sec:awgn_est}.
 
-
 %---------------------------------------
 \begin{theorem}[\thmd{General ML estimation}]
 \index{maximum likelihood estimation!general}
@@ -570,7 +585,7 @@ Let $\Psi$ be an orthonormal set spanning $\rvx(t)$ such that
     \Psi     &\eqd& \seqn{\fpsi_1(t), \fpsi_2(t), \ldots, \fpsi_n(t)}
   \\\fdoty_n &\eqd& \inprod{\rvy(t)}{\fpsi_n(t)}
   \\\fdotx_n &\eqd& \inprod{\rvx(t)}{\fpsi_n(t)}
-  \\\rvy(t)  &=   & \rvx(t;\estT) + \fn(t).
+  \\\rvy(t)  &=   & \rvx(t;\estT) + \fv(t).
 \end{array}$
 \\
 Then the optimal ML-estimate $\estML$ of parameter $\theta$ is
@@ -627,8 +642,8 @@ Then the optimal ML-estimate $\estML$ of parameter $\theta$ is
 Let $\opSys$ be an additive white gaussian noise system
 such that
 \begin{align*}
-   \rvy(t)     &=     [\opCawgn\fx](t) = \rvx(t;a) + \fn(t) \\
-   \rvx(t;a)   &\eqd  a  \sym(t).
+     \rvy(t)     &= \rvx(t;a) + \fv(t)
+   \\\rvx(t;a)   &\eqd  a  \sym(t).
 \end{align*}
 Then
 \thmbox{\begin{array}{rclM}
@@ -697,9 +712,9 @@ Then
    \pE\estML[a]
      &= \pE\frac{1}{\norm{\sym(t)}^2} \int_{t\in\R} \rvy(t)\sym(t) \dt
      && \text{by previous result}
-   \\&= \pE\frac{1}{\norm{\sym(t)}^2} \int_{t\in\R} [ a \sym(t)+\fn(t)]\sym(t) \dt
+   \\&= \pE\frac{1}{\norm{\sym(t)}^2} \int_{t\in\R} [ a \sym(t)+\fv(t)]\sym(t) \dt
      && \text{by hypothesis}
-   \\&= \frac{1}{\norm{\sym(t)}^2} \int_{t\in\R} \pE[ a \sym(t)+\fn(t)]\sym(t) \dt
+   \\&= \frac{1}{\norm{\sym(t)}^2} \int_{t\in\R} \pE[ a \sym(t)+\fv(t)]\sym(t) \dt
      && \text{by linearity of $\int\cdot\dt$ and $\pE$}
    \\&= \frac{1}{\norm{\sym(t)}^2}  a  \int_{t\in\R} \sym^2(t) \dt
      && \text{by $\pE$ operation}
@@ -716,12 +731,12 @@ Then
         \int_{t\in\R} \rvy(t)\lambda(t) \dt \int_v \rvy(v)\lambda(v) \dv
         \right]
   \\&= \pE \left[  \frac{1}{\norm{\lambda(t)}^4}
-        \int_{t\in\R} \int_v [a\lambda(t) + \fn(t)][a\lambda(v) + \fn(v)]
+        \int_{t\in\R} \int_v [a\lambda(t) + \fv(t)][a\lambda(v) + \fv(v)]
         \lambda(t) \lambda(v)
         \dv\dt \right]
   \\&= \pE \left[  \frac{1}{\norm{\lambda(t)}^4}
         \int_{t\in\R} \int_v
-        [a^2\lambda(t)\lambda(v) + a\lambda(t)\fn(v) + a\lambda(v)\fn(t) + \fn(t)\fn(v)]
+        [a^2\lambda(t)\lambda(v) + a\lambda(t)\fv(v) + a\lambda(v)\fv(t) + \fv(t)\fv(v)]
         \lambda(t) \lambda(v)
         \dv\dt \right]
   \\&= \left[  \frac{1}{\norm{\lambda(t)}^4}
@@ -833,60 +848,59 @@ if and only if
 Let $\opSys$ be an additive white gaussian noise system
 such that
 $\begin{array}[t]{rcl}
-   \rvy(t)     &=& [\opCawgn\fx](t) = \fx(t;\phi) + \fn(t) \\
-   \rvx(t;\phi) &=& A\cos(2\pi f_ct +  \phi).
+     \rvy(t)      &=& \fx(t;\phi) + \fv(t)
+   \\\rvx(t;\phi) &=& A\cos(2\pi f_ct +  \phi).
 \end{array}$
 \\
 Then the optimal ML-estimate of parameter $ \phi $ is
 \thmbox{
    \estML[\phi]
-      =   -\atan\left(
+      =   -\atan\brp{
            \frac{\inprod{\rvy(t)}{\sin(2\pi f_ct)}}
                 {\inprod{\rvy(t)}{\cos(2\pi f_ct)}}
-           \right)
+           }
    }
 \end{theorem}
 \begin{proof}
 \begin{align*}
    \estML[\phi]
      &= \argmax_\phi
-         \left[ 2\inprod{\rvy(t)}{\rvx(t;\estT)}-\norm{\rvx(t;\phi)}^2 \right]
+         \brs{ 2\inprod{\rvy(t)}{\rvx(t;\estT)}-\norm{\rvx(t;\phi)}^2 }
      && \text{by \prefpp{thm:estML_general}}
    \\&= \argmax_\phi
-         \left[ 2\inprod{\rvy(t)}{\rvx(t;\phi)} \right]
+         \brs{ 2\inprod{\rvy(t)}{\rvx(t;\phi)} }
      && \text{because $\norm{\rvx(t;\phi)}$ does not depend on $\phi$}
    \\&= \arg_\phi
-         \left[ \pderiv{}{\phi} \inprod{\rvy(t)}{\rvx(t;\phi)} = 0 \right]
+         \brs{ \pderiv{}{\phi} \inprod{\rvy(t)}{\rvx(t;\phi)} = 0 }
    \\&= \arg_\phi
-         \left[ \inprod{\rvy(t)}{\pderiv{}{\phi} \rvx(t;\phi)} = 0 \right]
+         \brs{ \inprod{\rvy(t)}{\pderiv{}{\phi} \rvx(t;\phi)} = 0 }
      && \text{because $\inprod{\cdot}{\cdot}$ is a linear operator}
    \\&= \arg_\phi
-         \left[ \inprod{\rvy(t)}{\pderiv{}{\phi} A\cos(2\pi f_ct+\phi)} = 0 \right]
+         \brs{\inprod{\rvy(t)}{\pderiv{}{\phi} A\cos(2\pi f_ct+\phi)} = 0 }
    \\&= \arg_\phi
-         \left[ \inprod{\rvy(t)}{-A\sin(2\pi f_ct+\phi)} = 0 \right]
+         \brs{\inprod{\rvy(t)}{-A\sin(2\pi f_ct+\phi)} = 0 }
    \\&= \arg_\phi
          \left[ -A\inprod{\rvy(t)}{\cos(2\pi f_ct)\sin\phi+\sin(2\pi f_ct)\cos\phi} = 0 \right]
-   \\&= \arg_\phi \left[
+   \\&= \arg_\phi \brs{
            \sin\phi\inprod{\rvy(t)}{\cos(2\pi f_ct)} =
           -\cos\phi\inprod{\rvy(t)}{\sin(2\pi f_ct)}
-           \right]
-   \\&= \arg_\phi \left[
+           }
+   \\&= \arg_\phi \brs{
            \frac{\sin\phi}{\cos\phi} =
           -\frac{\inprod{\rvy(t)}{\sin(2\pi f_ct)}}
                 {\inprod{\rvy(t)}{\cos(2\pi f_ct)}}
-           \right]
-   \\&= \arg_\phi \left[
+           }
+   \\&= \arg_\phi \brs{
            \tan\phi =
           -\frac{\inprod{\rvy(t)}{\sin(2\pi f_ct)}}
                 {\inprod{\rvy(t)}{\cos(2\pi f_ct)}}
-           \right]
-   \\&=  -\atan\left(
+           }
+   \\&=  -\atan\brp{
            \frac{\inprod{\rvy(t)}{\sin(2\pi f_ct)}}
                 {\inprod{\rvy(t)}{\cos(2\pi f_ct)}}
-           \right)
+           }
 \end{align*}
 \end{proof}
-
 
 %---------------------------------------
 \begin{theorem}[\thmd{ML estimation of a function of a parameter}]
@@ -898,8 +912,8 @@ Then the optimal ML-estimate of parameter $ \phi $ is
 Let $\opSys$ be an additive white gaussian noise system
 such that
 $\begin{array}[t]{rcl}
-   \rvy(t)     &=& [\opCawgn\fx](t) = \rvx(t;\theta) + \fv(t) \\
-   \rvx(t;\theta)   &=& \fg(\theta)
+     \rvy(t)       &=& \fx(t;\theta) + \fv(t)
+   \\\fx(t;\theta) &=& \fg(\theta)
 \end{array}$\\
 and $\fg$ is \prope{one-to-one and onto} (\prope{invertible}).
 \\
@@ -1130,12 +1144,12 @@ maximize the SNR of a received signal when signal matching is used.
 \begin{theorem}
 \label{thm:mf_maxSNR}
 %--------------------------------------
-Let $\rvx(t)$ be a transmitted signal, $\fn(t)$ noise, and $\rvy(t)$ the received signal
+Let $\rvx(t)$ be a transmitted signal, $\fv(t)$ noise, and $\rvy(t)$ the received signal
 in an AWGN channel.
 Let the \hie{signal to noise ratio} SNR be defined as
 \\\indentx$\ds
       \snr[\rvy(t)] \eqd \frac{\abs{\inprod{\rvx(t)}{\rvx(t)}}^2}
-                            {\pE\brs{\abs{\inprod{\fn(t)}{\rvx(t)}}^2}}.
+                            {\pE\brs{\abs{\inprod{\fv(t)}{\rvx(t)}}^2}}.
           $
 \thmboxt{
   $\ds\snr[\rvy(t)] \le \frac{2\norm{\rvx(t)}^2}{N_o }$
@@ -1148,15 +1162,15 @@ Let the \hie{signal to noise ratio} SNR be defined as
 \begin{align*}
    \snr[\rvy(t)]
      &\eqd \frac{\abs{\inprod{\rvx(t)}{\rvx(t)}}^2}
-                {\pE\brs{\abs{\inprod{\fn(t)}{\rvx(t)}}^2}}
+                {\pE\brs{\abs{\inprod{\fv(t)}{\rvx(t)}}^2}}
    \\&=    \frac{\abs{\inprod{\rvx(t)}{f(t)}}^2}
-                {\pE\brs{\left[\int_{t\in\R} \fn(t)\rvx^\ast(t)\;dt\right]
+                {\pE\brs{\left[\int_{t\in\R} \fv(t)\rvx^\ast(t)\;dt\right]
                       \left[\int_{\estT} n(\estT)f^\ast(\estT)\;du\right]^\ast}
                 }
    \\&=    \frac{\abs{\inprod{\rvx(t)}{\rvx(t)}}^2}
-                {\pE\brs{\int_{t\in\R} \int_{\estT} \fn(t)n^\ast(\estT)\rvx^\ast(t)\rvx(\estT)\;dtdu}}
+                {\pE\brs{\int_{t\in\R} \int_{\estT} \fv(t)n^\ast(\estT)\rvx^\ast(t)\rvx(\estT)\;dtdu}}
    \\&=    \frac{\abs{\inprod{\rvx(t)}{f(t)}}^2}
-                {\int_{t\in\R} \int_{\estT} \pE\brs{\fn(t)n^\ast(\estT)}\rvx^\ast(t)\rvx(\estT)\;dtdu}
+                {\int_{t\in\R} \int_{\estT} \pE\brs{\fv(t)n^\ast(\estT)}\rvx^\ast(t)\rvx(\estT)\;dtdu}
    \\&=    \frac{\abs{\inprod{\rvx(t)}{\rvx(t)}}^2}
                 {\int_{t\in\R} \int_{\estT} \frac{1}{2}N_o\delta(t-\estT) \rvx^\ast(t)\rvx(\estT)\;dtdu}
    \\&=    \frac{\abs{\inprod{\rvx(t)}{\rvx(t)}}^2}
