rsd20190823 fix-up

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -971,15 +971,14 @@
   }
   
 @book{callahan2010,
+  isbn         = {9781441973320},
+  isbn10       = {144197332X},
   author       = {James J. Callahan},
   title        = {Advanced Calculus: A Geometric View},
   year         = {2010},
   month        = {September 9},
   publisher    = {Springer Science \& Business Media},
-  isbn         = {9781441973320},
   pages        = {526},
-  isbn         = {9781461225607},
-  isbn10       = {144197332X},
   url          = {http://books.google.com/books?vid=ISBN144197332X},
   urla         = {http://www.amazon.com/dp/144197332X},
   }
@@ -2575,9 +2574,7 @@
   isbn10       = {0486824179},
   author       = {Alexander Graham},
   title        = {Kronecker Products and Matrix Calculus: With Applications},
-  series       = {Ellis Horwood Series; Mathematics and its Applications},
   editor       = {G.M. Bell},
-  publisher    = {Ellis Horwood Limited},
   year         = {2018},
   series       = {Dover Books on Mathematics},
   publisher    = {Courier Dover Publications},
@@ -2612,8 +2609,8 @@
   publisher    = {Defense Technical Information Center},
   }
 
-@journal{gray2006,
-  journal      = {Foundations and Trends{\trademark} in Communications and Information Theory},
+@article{gray2006,
+  journal      = {Foundations and Trends{\puttrademark} in Communications and Information Theory},
   author       = {Robert M. Gray},
   title        = {Toeplitz and Circulant Matrices: A Review},
   year         = {2006},
@@ -4377,7 +4374,8 @@
   publisher    = {Univerzitet u Beogradu (University of Belgrade)},
   address      = {Belgrade},
   series       = {Serija Matematika i fizika (Series Mathematics and Physics)},
-  number       = {643},
+  volume       = {634},
+  number       = {677},
   pages        = {62--69},
   url          = {http://www.mi.sanu.ac.rs/~gvm/radovi/643.pdf},
   }
@@ -5685,8 +5683,6 @@
   title        = {Introduction to Large Truncated Toeplitz Matrices},
   publisher    = {Springer},
   year         = {1999},
-  url          = {https://d-nb.info/955562643/04},
-  publisher    = {Springer},
   url          = {http://books.google.com/books?vid=ISBN9780387985701},
   urla         = {http://www.amazon.com/dp/9780387985701},
   }
@@ -6299,7 +6295,7 @@
   title        = {An efficient nonlinear cardinal B-spline model for high tide forecasts at the Venice Lagoon},
   author       = {H. L. Wei and S. A. Billings},
   url          = {https://www.nonlin-processes-geophys.net/13/577/2006/},
-  url          = {http://eprints.whiterose.ac.uk/1945/1/weihl1_NPG06-13(5)pp577-584.pdf},
+  note         = {\url{http://eprints.whiterose.ac.uk/1945/1/weihl1_NPG06-13(5)pp577-584.pdf}},
   journal      = {Nonlinear Processes in Geophysics},
   year         = {2006},
   volume       = {13},
@@ -6307,14 +6303,15 @@
   }  
 
 @book{wells1987,
+  isbn         = {9780140080292},
+  isbn10       = {0140080295},
   author       = {David Wells},
   title        = {The Penguin Dictionary of Curious and Interesting Numbers},
   year         = {1987},
   month        = {April 7},
   pages        = {229},
   edition      = {revised},
-  isbn         = {9780140080292},
-  isbn10       = {0140080295},
+  publisher    = {Penguin Books},
   urlg         = {http://books.google.com/books?vid=ISBN0140080295},
   urlw         = {http://www.worldcat.org/isbn/0140080295},
   url          = {http://www.amazon.com/dp/0140080295},
