--- a/common/kl_basis.tex
+++ b/common/kl_basis.tex
@@ -249,21 +249,21 @@ and $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
 %These are described in the next four theorems.
 
 %---------------------------------------
-\begin{theorem}[\thme{Sufficient statistics for additive noise system}]
+\begin{theorem}[\thmd{Additive noise projection statistics}]
 \label{thm:an_stats}
 \index{projection statistics!Additive noise channel}
 %---------------------------------------
 Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$, and $\setY$ be defined as in \prefpp{def:sstat}.
 \thmbox{
-  \brb{\begin{array}{FMD}
-    (A). & $\Psi$ is an \structe{orthonormal basis} for $\fx(t)$ & and
-  \\(B). & $\fy(t) \eqd \fx(t) + \fv(t)$                         & (\prope{additive noise})
+  \brb{\begin{array}{FrclDD}
+    (A). & \fy(t)                    &\eqd     & \fx(t) + \fv(t) & (\propb{additive})              & and
+  \\(B). & \fx(t)                    &\subseteq& \linspan\Psi    & ($\Psi$ \prope{spans} $\fx(t)$) & and
+  \\(C). & \inprod{\fpsi_n}{\fpsi_m} &=        & \kdelta_{mn}    & (\prope{orthonormal})
   \end{array}}
   \implies
-\implies
-\brb{\begin{array}{lrcl}
-   \pE(\fdoty_n|\theta)       &= \fdotx_n(\theta) + \pE \fdotv_n
-\end{array}}
+  \brb{\begin{array}{lrcl}
+     \pE(\fdoty_n|\theta)       &= \fdotx_n(\theta) + \pE \fdotv_n
+  \end{array}}
 }
 \end{theorem}
 \begin{proof}
@@ -271,8 +271,10 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
    \pE(\fdoty_n |\theta)
      &\eqd \pE\brp{\inprod{\rvy(t)}{\fpsi_n(t)}  |\theta}
      && \text{by definition of $\fdoty_n$}
+     && \text{\xref{def:sstat}}
    \\&= \pE{\inprod{\rvx(t;\theta)+\fv(t)}{\fpsi_n(t)}}
-     && \text{by definition of $\fy(t)$}
+     && \text{by \prope{additive} hypothesis}
+     && \text{hypothesis (A)}
    \\&= \pE{\inprod{\rvx(t;\theta)}{\fpsi_n(t)}} +   {\inprod{\fv(t)}{\fpsi_n(t)}}
      && \text{by \prope{additive} property of $\inprodn$}
      && \text{\xref{def:inprod}}
@@ -282,7 +284,8 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
      && \text{by \prope{additive} property of $\inprodn$}
      && \text{\xref{def:inprod}}
    \\&= \pE\brp{\sum_{k=1}^\xN \fdotx_k(\theta) \kdelta_{k-n}(t) + \fdotv_n}
-     && \text{by \prope{orthonormal} hypothesis of $\Psi$}
+     && \text{by \prope{orthonormal} hypothesis}
+     && \text{(C)}
    \\&= \pE\brp{\fdotx_n(\theta) + \fdotv_n}
      && \text{by definition of $\kdelta$}
    \\&= \pE{\fdotx_n(\theta) } +   \pE{\fdotv_n}
@@ -291,7 +294,6 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
    \\&= \fdotx_n(\theta)
 \end{align*}
 \end{proof}
-
 
 %======================================
 %\subsection{Additive gaussian noise channel}
@@ -335,23 +337,24 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
 \end{figure}
 
 %---------------------------------------
-\begin{theorem}%[Additive \prope{Gaussian} noise projection statistics]
+\begin{theorem}[\thmd{Additive Gaussian noise projection statistics}]
 \label{thm:agn_stats}
 \index{projection statistics!Additive \prope{Gaussian} noise channel}
 %---------------------------------------
 Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$, and $\setY$ be defined as in \prefpp{def:sstat}.
 \thmbox{
-  \mcom{\brb{\begin{array}{FMD}
-    (A). & $\Psi$ is an \structe{orthonormal basis} for $\fx(t)$ & and
-  \\(B). & $\fy(t) \eqd \fx(t) + \fv(t)$                         & (\prope{additive noise})
-  \\(C). & $\fv(t)\sim\pN(0,\sigma^2)$                            & (\prope{Gaussian})
-  \end{array}}}{additive \prope{Gaussian} channel}
+  \mcom{\brb{\begin{array}{FrclDD}
+    (A). & \fy(t)                    &\eqd     & \fx(t) + \fv(t) & (\propb{additive})              & and
+  \\(B). & \fv(t)                    &\sim     & \pN{0}{\sigma^2}& (\propb{Gaussian})              & and
+  \\(C). & \fx(t)                    &\subseteq& \linspan\Psi    & ($\Psi$ \prope{spans} $\fx(t)$) & and
+  \\(D). & \inprod{\fpsi_n}{\fpsi_m} &=        & \kdelta_{mn}    & (\prope{orthonormal})
+  \end{array}}}{\prope{additive Gaussian} system}
 \implies
-\brb{\begin{array}{FrclD}
-     (1). & \pE\fdotv_n           &=   & 0                               & (\prope{zero-mean})
-   \\(2). & \pE(\fdoty_n|\theta)  &=   & \fdotx_n(\theta)                & 
-   \\(3). & \fdotv_n              &\sim& \pN{0}{\sigma^2}                & (\prope{Gaussian})
-   \\(4). & \fdoty_n|\theta       &\sim& \pN{\fdotx_n(\theta)}{\sigma^2} & (\prope{Gaussian})
+\brb{\begin{array}{Frcl}
+     (1). & \pE\fdotv_n           &=   & 0                               %& (\prope{zero-mean})
+   \\(2). & \pE(\fdoty_n|\theta)  &=   & \fdotx_n(\theta)                %& 
+   \\(3). & \fdotv_n              &\sim& \pN{0}{\sigma^2}                %& (\prope{Gaussian})
+   \\(4). & \fdoty_n|\theta       &\sim& \pN{\fdotx_n(\theta)}{\sigma^2} %& (\prope{Gaussian})
 \end{array}}
 }
 \end{theorem}
@@ -367,6 +370,8 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
    (\fdoty_n |\theta)
      &\eqd {\inprod{\rvy(t)}{\fpsi_n(t)}}  |\theta
    \\&=    {\inprod{\rvx(t;\theta)+\fv(t)}{\fpsi_n(t)}}
+     && \text{by \prope{additive} hypothesis}
+     && \text{hypothesis (A)}
    \\&=    {\inprod{\rvx(t;\theta)}{\fpsi_n(t)}} +   {\inprod{\fv(t)}{\fpsi_n(t)}}
    \\&=    \inprod{\sum_{k=1}^\xN \fdotx_k(\theta) \fpsi_k(t)}{\fpsi_n(t)} + \fdotv_n
    \\&=    \sum_{k=1}^\xN \fdotx_k(\theta) \inprod{\fpsi_k(t)}{\fpsi_n(t)} + \fdotv_n
@@ -387,64 +392,66 @@ Gaussian processes.
 %\label{sec:opCawn}
 %======================================
 %---------------------------------------
-\begin{theorem}%[Additive white noise projection statistics]
+\begin{theorem}[\thmd{Additive white noise projection statistics}]
 \label{thm:awn_stats}
 \index{projection statistics!Additive white noise channel}
 %---------------------------------------
 Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$, and $\setY$ be defined as in \prefpp{def:sstat}.
 \thmbox{
-  \mcom{\brb{\begin{array}{FMD}
-    (A). & $\Psi$ is an \structe{orthonormal basis} for $\fx(t)$ & and
-  \\(B). & $\fy(t) \eqd \fx(t) + \fv(t)$                         & (\prope{additive noise})
-  \\(C). & $\fv(t)\sim\pN(0,\sigma^2)$                           & (\prope{Gaussian})
-  \end{array}}}{\prope{additive Gaussian} system}
-\implies
-\brb{\begin{array}{FlclD}
-     (1). & \pE\fdotv_n                            &=& 0                     & (\prope{zero-mean})
-   \\(2). & \pE(\fdoty_n|\theta)                   &=& \fdotx_n(\theta)      & 
-   \\(3). & \cov{\fdotv_n}{\fdotv_m}               &=& \sigma^2 \kdelta_{nm} & (\prope{uncorrelated})
-   \\(4). & \cov{\fdoty_n|\theta}{\fdoty_m|\theta }&=& \sigma^2 \kdelta_{nm} & (\prope{uncorrelated})
-\end{array}}
-}
+  \mcom{\brbr{\begin{array}{FrclD}
+    (A). & \fy(t)                    &\eqd     & \fx(t) + \fv(t)     & and %& (\propb{additive})              & and
+  \\(B). & \cov{\fv(t)}{\fv(u)}      &=        & \sigma^2\delta(t-u) & and %& (\propb{white})                 & and
+ %\\(B). & \fv(t)                    &\sim     & \pN{0}{\sigma^2}    & and %& (\propb{Gaussian})              & and
+  \\(C). & \fx(t)                    &\subseteq& \linspan\Psi        & and %& ($\Psi$ \prope{spans} $\fx(t)$) & and
+  \\(D). & \inprod{\fpsi_n}{\fpsi_m} &=        & \kdelta_{mn}        &     %& (\prope{orthonormal})
+  \end{array}}}{\prope{additive white} system}
+  \implies
+  \brbl{\begin{array}{FlclD}
+       (1). & \pE\fdotv_n                            &=& 0                     & (\prope{zero-mean})
+     \\(2). & \pE(\fdoty_n|\theta)                   &=& \fdotx_n(\theta)      & 
+     \\(3). & \cov{\fdotv_n}{\fdotv_m}               &=& \sigma^2 \kdelta_{nm} & (\prope{uncorrelated})
+     \\(4). & \cov{\fdoty_n|\theta}{\fdoty_m|\theta }&=& \sigma^2 \kdelta_{nm} & (\prope{uncorrelated})
+  \end{array}}
+  }
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
-  \item Because the noise is additive (see \prefpp{thm:an_stats})
+  \item Because the noise is \prope{additive} (hypothesis A)\ldots
     \begin{align*}
-       \pE\fdotv_{n}           &= 0  \\
-       (\fdoty_n |\theta)      &= \fdotx_n(\theta)  + \fdotv_n \\
-       \pE({\fdoty_n} | \theta) &= \fdotx_n(\theta).
+         \pE\fdotv_{n}            &= 0                            && \text{by \prope{additive} property and \prefp{thm:an_stats}}
+       \\(\fdoty_n |\theta)       &= \fdotx_n(\theta)  + \fdotv_n && \text{by \prope{additive} property and \prefp{thm:an_stats}}
+       \\\pE({\fdoty_n} | \theta) &= \fdotx_n(\theta)             && \text{by \prope{additive} property and \prefp{thm:an_stats}}
     \end{align*}
 
   \item Proof for (3):\label{item:awn_stats_covvv}
-\begin{align*}
-   \cov{\fdotv_m}{\fdotv_n}
-      &= \cov{\inprod{\fv(t)}{\fpsi_m(t)}}{\inprod{\fv(t)}{\fpsi_n(t)}}
-      && \text{by definition of $\fdotv_n$}
-      && \text{\xref{def:sstat}}
-    \\&= \cov{\brp{\int_{t\in\R} \fv(t) \fpsi_m(t)\dt} 
-              \brp{\int_{u\in\R} \fv(u) \fpsi_n(u)\du}}
-      && \text{by definition of $\inprodn$}
-      && \text{\xref{def:sstat}}
-    \\&= \pE\brs{\brp{\int_{t\in\R} \fv(t) \fpsi_m(t)\dt} 
-              \brp{\int_{u\in\R} \fv(u) \fpsi_n(u)\du}}
-      && \text{by definition of $\pCov$}
-    \\&= \pE\brs{\int_{t\in\R}\int_{u\in\R} \fv(t)\fv(u) \fpsi_m(t) \fpsi_n(u) \dt\du} 
-    \\&= \int_{t\in\R}\int_{u\in\R} \pE\brs{\fv(t)\fv(u)} \fpsi_m(t) \fpsi_n(u) \dt\du
-    \\&= \int_{t\in\R}\int_{u\in\R} \sigma^2\delta(t-u) \fpsi_m(t) \fpsi_n(u) \dt\du
-      && \text{by \prope{white} hypothesis}
-      && \text{???}
-    \\&= \sigma^2 \int_{t\in\R}  \fpsi_m(t) \fpsi_n(u) \dt
-    \\&= \sigma^2 \inprod{\fpsi_m(t)}{\fpsi_n(u)}
-      && \text{by definition of $\inprodn$}
-      && \text{\xref{def:sstat}}
-    \\&= \brbl{\begin{array}{lM}
-             \sigma^2 & for $n=m$ \\
-             0        & for $n\ne m$.
-          \end{array}}
-      && \text{by \prope{orthonormal} property}
-      && \text{\xref{def:sstat}}
-  \end{align*}
+    \begin{align*}
+     \cov{\fdotv_m}{\fdotv_n}
+        &= \cov{\inprod{\fv(t)}{\fpsi_m(t)}}{\inprod{\fv(t)}{\fpsi_n(t)}}
+        && \text{by definition of $\fdotv_n$}
+        && \text{\xref{def:sstat}}
+      \\&= \cov{\brp{\int_{t\in\R} \fv(t) \fpsi_m(t)\dt}}
+               {\brp{\int_{u\in\R} \fv(u) \fpsi_n(u)\du}}
+        && \text{by definition of $\inprodn$}
+        && \text{\xref{def:sstat}}
+      \\&= \pE\brs{\brp{\int_{t\in\R} \fv(t) \fpsi_m(t)\dt} 
+                   \brp{\int_{u\in\R} \fv(u) \fpsi_n(u)\du}}
+        && \text{by definition of $\pCov$}
+      \\&= \pE\brs{\int_{t\in\R}\int_{u\in\R} \fv(t)\fv(u) \fpsi_m(t) \fpsi_n(u) \dt\du} 
+      \\&= \int_{t\in\R}\int_{u\in\R} \pE\brs{\fv(t)\fv(u)} \fpsi_m(t) \fpsi_n(u) \dt\du
+      \\&= \int_{t\in\R}\int_{u\in\R} \sigma^2\delta(t-u) \fpsi_m(t) \fpsi_n(u) \dt\du
+        && \text{by \prope{white} hypothesis}
+        && \text{(B)}
+      \\&= \sigma^2 \int_{t\in\R}  \fpsi_m(t) \fpsi_n(u) \dt
+      \\&= \sigma^2 \inprod{\fpsi_m(t)}{\fpsi_n(u)}
+        && \text{by definition of $\inprodn$}
+        && \text{\xref{def:sstat}}
+      \\&= \brbl{\begin{array}{lM}
+               \sigma^2 & for $n=m$ \\
+               0        & for $n\ne m$.
+            \end{array}}
+        && \text{by \prope{orthonormal} property}
+        && \text{\xref{def:sstat}}
+    \end{align*}
   
   \item Proof for (4):
     \begin{align*}
@@ -461,6 +468,7 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
                 0        & for $n\ne m$.
              \end{array}}
     \end{align*}
+\end{enumerate}
 \end{proof}
 
 %======================================
@@ -505,41 +513,42 @@ Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$,
 \end{figure}
 
 %---------------------------------------
-\begin{theorem}%[AWGN projection statistics]
+\begin{theorem}[\thmd{AWGN projection statistics}]
 \label{thm:awgn_stats}
 \label{thm:ms_stats}
 \index{projection statistics!Additive white \prope{Gaussian} noise channel}
 %---------------------------------------
 Let $\Psi$, $\rvy(t)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$, and $\setY$ be defined as in \prefpp{def:sstat}.
 \thmbox{
-  \mcom{\brb{\begin{array}{FMD}
-    (A). & $\Psi$ is an \structe{orthonormal basis} for $\fx(t)$ & and
-  \\(B). & $\fy(t) \eqd \fx(t) + \fv(t)$                         & (\prope{additive noise})
-  \\(C). & $\fv(t)$ is                                           & (\prope{white noise})
-  \\(D). & $\fv(t)\sim\pN(0,\sigma^2)$                           & (\prope{Gaussian})
+  \mcom{\brbr{\begin{array}{FrclD}
+    (A). & \fy(t)                    &\eqd     & \fx(t) + \fv(t)     & and %& (\propb{additive})              & and
+  \\(B). & \cov{\fv(t)}{\fv(u)}      &=        & \sigma^2\delta(t-u) & and %& (\propb{white})                 & and
+  \\(C). & \fv(t)                    &\sim     & \pN{0}{\sigma^2}    & and %& (\propb{Gaussian})              & and
+  \\(D). & \fx(t)                    &\subseteq& \linspan\Psi        & and %& ($\Psi$ \prope{spans} $\fx(t)$) & and
+  \\(E). & \inprod{\fpsi_n}{\fpsi_m} &=        & \kdelta_{mn}        &     %& (\prope{orthonormal})
   \end{array}}}{\prope{additive white Gaussian} system}
-\implies
-\brb{\begin{array}{FrclD}
-     (1). & \fdotv_n                            &\sim& \pN{0}{\sigma^2}                     & (\prope{Gaussian})
-   \\(2). & \fdoty_n|\theta                     &\sim& \pN{\fdotx_n(\theta)}{\sigma^2}      & (\prope{Gaussian})
-   \\(3). & \cov{\fdotv_n}{\fdotv_m}            &=   & \sigma^2 \kdelta_{nm}                & (\prope{uncorrelated})
-   \\(4). & \cov{\fdoty_n}{\fdoty_m }           &=   & \sigma^2 \kdelta_{nm}                & (\prope{uncorrelated})
-   \\(5). & \psp\{\fdotv_n=a \land \fdotv_m=b\} &=   & \psp\{\fdotv_n=a\}\psp\{\fdotv_m=b\} & (\prope{independent})
-   \\(6). & \psp\{\fdoty_n=a \land \fdoty_m=b\} &=   & \psp\{\fdoty_n=a\}\psp\{\fdoty_m=b\} & (\prope{independent})
-\end{array}}
-}
+  \implies
+  \brbl{\begin{array}{FrclD}
+       (1). & \fdotv_n                            &\sim& \pN{0}{\sigma^2}                     & (\prope{Gaussian})
+     \\(2). & \fdoty_n|\theta                     &\sim& \pN{\fdotx_n(\theta)}{\sigma^2}      & (\prope{Gaussian})
+     \\(3). & \cov{\fdotv_n}{\fdotv_m}            &=   & \sigma^2 \kdelta_{nm}                & (\prope{uncorrelated})
+     \\(4). & \cov{\fdoty_n}{\fdoty_m }           &=   & \sigma^2 \kdelta_{nm}                & (\prope{uncorrelated})
+     \\(5). & \psp\{\fdotv_n=a \land \fdotv_m=b\} &=   & \psp\{\fdotv_n=a\}\psp\{\fdotv_m=b\} & (\prope{independent})
+     \\(6). & \psp\{\fdoty_n=a \land \fdoty_m=b\} &=   & \psp\{\fdoty_n=a\}\psp\{\fdoty_m=b\} & (\prope{independent})
+  \end{array}}
+  }
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
-  \item Proof for (1) and (2) follow because the operations are \prope{linear} on \prope{Gaussian} processes.
+  \item Proof for (1) and (2) follow because the operations are \prope{linear} on processes are \prope{Gaussian} (hypothesis C).
 
-  \item Proof for (3) and (4): by \prefpp{thm:awn_stats} (for AWN channel)
+  \item Proof for (3) and (4):
     \begin{align*}
-       \pE{\fdotv_{n}} &= 0
-     \\\cov{\fdotv_m}{\fdotv_n} &= \sigma^2 \kdelta_{mn}
-     \\\fdoty_n &= \fdotx_n  + \fdotv_n
-     \\\pE{\fdoty_n} &= \fdotx_n
-     \\\cov{\fdoty_n}{\fdoty_m } &= \sigma^2 \kdelta_{mn}
+       \pE{\fdotv_{n}}           &= 0                      && \text{by \prope{AWN} properties and \prefp{thm:awn_stats}}
+     \\\cov{\fdotv_m}{\fdotv_n}  &= \sigma^2 \kdelta_{mn}  && \text{by \prope{AWN} properties and \prefp{thm:awn_stats}}
+     \\\fdoty_n                  &= \fdotx_n  + \fdotv_n   && \text{by \prope{AWN} properties and \prefp{thm:awn_stats}}
+     \\\pE{\fdoty_n}             &= \fdotx_n               && \text{by \prope{AWN} properties and \prefp{thm:awn_stats}}
+     \\\cov{\fdoty_n}{\fdoty_m } &= \sigma^2 \kdelta_{mn}  && \text{by \prope{AWN} properties and \prefp{thm:awn_stats}}
     \end{align*}
 
   \item Proof for (5) and (6): Because the processes are \prope{Gaussian},
@@ -975,7 +984,7 @@ the \vale{Cram/'er-Rao bound} to find a lower bound on the variance:
               \exp{\frac{-1}{2\sigma^2}\sum_{n=1}^\xN [\fdoty_n-\fg(\theta)]^2 }\right]
            }}
      && \begin{array}{@{}M}
-         by \prope{AWGN} hypothesis 
+         by \prope{AWGN} hypothesis\\
          and \prefp{thm:awgn_stats}
         \end{array}
    \\&=   \frac{-1}{\ds\pE\brp{
