--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -154,7 +154,7 @@ which in turn follows more or less directly from the ubiquitous
 \ineqe{Cauchy-Schwarz Inequality} \xxref{thm:seq_cs}{thm:cs}.
 
 Even further strengthening the average as choice estimator is \prefpp{cor:mean_white_gaussian}
-which demonstrates that in the case where $\seqn{\rvx_n$} is \prope{uncorrelated} and 
+which demonstrates that in the case where $\seqn{\rvx_n}$ is \prope{uncorrelated} and 
 \prope{Gaussian}, then the optimal maximum likelihood estimator is the average.
 
 %---------------------------------------
@@ -353,8 +353,8 @@ Let $\mu^4\eqd\pE\brs{\brp{\rvx_n-\mean}^4}$ be the \fncte{4th central moment} o
         \begin{align*}
           \pE\varest_B\brp{\seqn{\rvx_n}}
             &\eqd \pE\brs{\frac{1}{\xN}  \sum_{n=1}^{\xN} \brp{\rvx_n - \meanest}^2}
-            && \text{by definition of $\varest_B$ 
-                     \xref{def:varest}}
+            && \text{by definition of $\varest_B$}
+            && \text{\xref{def:varest}}
           \\&= \frac{1}{\xN} \pE\brs{ \sum_{n=1}^{\xN} \brp{\rvx_n \mcom{-\mean + \mean}{$0$} - \meanest}^2}
           \\&= \mathrlap{
                \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \mcom{\pE\brp{\rvx_n -\mean}^2}{$\pvar$} + 2\pE\brs{(\rvx_n -\mean)(\mean - \meanest)} + \pE\brp{\mean - \mcom{\meanest}{$\pE\mean$}}^2 }
@@ -363,7 +363,7 @@ Let $\mu^4\eqd\pE\brs{\brp{\rvx_n-\mean}^4}$ be the \fncte{4th central moment} o
           \\&= \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \pvar + 2\brs{\mean^2 - \pE(\rvx_n\meanest) -\mean^2 + \mean^2} + \frac{1}{\xN}\pvar }
             && \mathrlap{\text{by \prefp{cor:mse_average}}}
           \\&= \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \pvar + 2\brs{\mean^2 - \brp{\mean^2 + \frac{1}{\xN}\pvar}} + \frac{1}{\xN}\pvar }
-            && \text{by \prope{unbiased} property of $\meanest$}
+            && \text{by \prope{unbiased} prop. of $\meanest$}
             && \text{\xref{ilem:varest_xmu}}
           \\&= \frac{1}{\xN}  \sum_{n=1}^{\xN} \brs{ \pvar - \frac{1}{\xN}\pvar} 
           \\&= \frac{\xN-1}{\xN}\pvar
