--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1239,7 +1239,7 @@
 \newcommand{\oppS} [0]{\linspan}                  %span of a set of vectors
 \newcommand{\epi} [0]{{\mathsfup{e\!p\!i}}} %epigraph of a functional
 \newcommand{\hyp} [0]{{\mathsfup{h\!y\!p}}} %hypograph of a functional
-\newcommand{\linspan} [0]{{\mathsfup{s\!p\!a\!n}\!}} %span of a set of vectors
+\newcommand{\linspan} [0]{{\mathsfup{s\!p\!a\!n}}} %span of a set of vectors
 \newcommand{\Span} [0]{\linspan} % deprecated
 \newcommand{\oppL} [0]{\oppXYZ{L}}                  %set of linear operators
 \newcommand{\oppB} [0]{\oppXYZ{B}}                  %set of bounded operators
