--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -31,8 +31,6 @@
   author       = {Randall J. Allemang and David L. Brown and Robert W. Rost},
   number       = {AFWAL-TR-87-3069},
   volume       = {2},
-  journal      = {Experimental Modal Analysis And Dynamic Component Synthesis},
-  volume       = {11},
   journal      = {Measurement Techniques for Experimental Modal Analysis},
   institution  = {Structural Dynamics Research Laboratory Department of Mechanical and Industrial Engineering University of Cincinnati},
   address      = {Cincinnati, Ohio 45221-0072},
@@ -268,7 +266,7 @@
   isbn         = {9780470430576},
   isbn10       = {0470430575},
   author       = {James V. Candy},
-  title        = {Bayesian Signal Processing: Classical, Modern, and Particle Filtering Methods}
+  title        = {Bayesian Signal Processing: Classical, Modern, and Particle Filtering Methods},
   volume       = {54},
   series       = {Adaptive and Cognitive Dynamic Systems: Signal Processing, Learning, Communications and Control},
   publisher    = {Wiley},
@@ -277,12 +275,12 @@
   url          = {http://books.google.com/books?vid=ISBN9780470430576},
   urla         = {http://www.amazon.com/dp/9780470430576},
   }
-  
+
 @book{candy2016,
   isbn         = {9781119125457},
   isbn10       = {1119125456},
   author       = {James V. Candy},
-  title        = {Bayesian Signal Processing: Classical, Modern, and Particle Filtering Methods}
+  title        = {Bayesian Signal Processing: Classical, Modern, and Particle Filtering Methods},
   volume       = {54},
   edition      = {2},
   series       = {Adaptive and Cognitive Dynamic Systems: Signal Processing, Learning, Communications and Control},
@@ -292,7 +290,7 @@
   url          = {http://books.google.com/books?vid=ISBN9781119125457},
   note         = {\url{http://www.amazon.com/dp/9781119125457}},
   }
-  
+
 @inproceedings{carne2006,
   author       = {Thomas G. Carne and C. R. Dohrmann},
   title        = {Improving Experimental Frequency Response Function Matrices for Admittance Modeling},
@@ -360,7 +358,6 @@
   year         = {1990},
   month        = {November},
   pages        = {449--461},
-  journal      = {Mechanical Systems and Signal Processing},
   title        = {Estimation of uncorrelated content in experimentally measured frequency response functions using three measurement channels},
   author       = {R. E. Cobb and L. D. Mitchell},
   url          = {https://doi.org/10.1016/0888-3270(90)90045-M},
@@ -510,7 +507,7 @@
   month        = {June},
   url          = {https://www.researchgate.net/publication/333882235},
   doi          = {10.13140/RG.2.2.15881.70240},
-  journal      = {ResearchGate.com}
+  journal      = {ResearchGate.com},
   }
 
 @article{hartley1928,
@@ -556,7 +553,6 @@
   volume       = {26},
   number       = {6},
   pages        = {135--139},
-  year         = {2004},
   publisher    = {FAMS, Inc.},
   month        = {September 24},
   year         = {2003},
@@ -572,7 +568,6 @@
   journal      = {The Journal of Scanning Microscopes},
   volume       = {26},
   pages        = {277--281},
-  year         = {2004},
   publisher    = {FAMS, Inc.},
   month        = {September 15},
   year         = {2004},
@@ -735,7 +730,7 @@
   url          = {http://books.google.com/books?vid=ISBN9780132141499},
   urla         = {http://www.amazon.com/dp/0132141493},
   }
-  
+
 @book{marple2019,
   isbn         = {9780486780528},
   isbn10       = {048678052X},
@@ -881,8 +876,8 @@
   }
 
 @book{papoulis1984,
-  isbn         = {0070484686},
   isbn         = {9780070484689},
+  isbn10       = {0070484686},
   author       = {Anthanasios Papoulis},
   title        = {Probability, Random Variables, and Stochastic Processes},
   series       = {McGraw-Hill Series in Electrical Engineering},
@@ -974,7 +969,7 @@
   pages        = {832--837},
   url          = {https://link.springer.com/content/pdf/10.1007/978-1-4419-8339-8_13.pdf},
   note         = {\url{https://projecteuclid.org/download/pdf_1/euclid.aoms/1177728190}},
-  }  
+  }
 
 @book{ross,
   author       = {Sheldon Ross},
@@ -1027,7 +1022,7 @@
   publisher    = {John Wiley \& Sons},
   year         = {2008},
   pages        = {416},
-  isbn         = {https://archive.org/details/FubdamentalsOfSignalShinHammond/},
+  url          = {https://archive.org/details/FubdamentalsOfSignalShinHammond/},
   }
 
 @article{shoo1988,
@@ -1066,7 +1061,6 @@
   publisher    = {Hodder \& Stoughton},
   year         = {1991},
   edition      = {5},
-  publisher    = {Oxford University Press},
   url          = {http://books.google.com/books?vid=ISBN9780340560235},
   urla         = {http://www.amazon.com/dp/9780340560235},
   }
@@ -1082,8 +1076,6 @@
   publisher    = {Cambridge University Press},
   year         = {2005},
   month        = {October 13},
-  isbn10       = {0521847664},
-  isbn         = {9780521847667},
   pages        = {372},
   }
 
